Migrate the build to Gradle on Java 25 and Micronaut 4.10